--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -8,26 +8,53 @@
   </head>
 
   <body>
+    <!-- Fixed Header -->
     <header>
-      <h1 data-i18n="categoryManager">Category Manager</h1>
+      <div class="header-title">
+        <h1 data-i18n="categoryManager">Category Manager</h1>
+        <button
+          id="info-btn"
+          class="btn-icon-sm"
+          title=""
+          data-i18n-title="downloadPathInfo"
+        >
+          <span class="info-icon">ℹ️</span>
+        </button>
+      </div>
+      <input
+        type="text"
+        id="category-filter"
+        class="filter-input"
+        data-i18n-placeholder="filterPlaceholder"
+        placeholder="Filter categories..."
+      />
     </header>
 
+    <!-- Scrollable Content -->
     <main>
-      <!-- Info Section -->
-      <section class="info-section">
-        <div class="info-box">
-          <span class="info-icon">ℹ️</span>
-          <p data-i18n="downloadPathInfo">
-            All folder paths are relative to your browser's default download
-            location.
-          </p>
-        </div>
+      <section class="categories-section">
+        <ul id="category-list"></ul>
+        <p
+          id="empty-message"
+          class="empty-message"
+          hidden
+          data-i18n="noCategories"
+        >
+          No categories yet. Add one below!
+        </p>
       </section>
+    </main>
 
-      <!-- Add Category Form -->
-      <section class="add-category-section">
-        <h2 data-i18n="addCategory">Add Category</h2>
-        <form id="category-form">
+    <!-- Fixed Footer -->
+    <footer>
+      <!-- Collapsible Add Category Form -->
+      <div class="add-category-wrapper">
+        <button id="toggle-form-btn" class="btn-add-category">
+          <span class="btn-icon-plus">+</span>
+          <span data-i18n="addCategory">Add Category</span>
+        </button>
+
+        <form id="category-form" class="add-category-form" hidden>
           <div class="form-group">
             <label for="category-name" data-i18n="categoryName"
               >Category Name</label
@@ -46,45 +73,31 @@
             />
           </div>
           <div class="form-group">
-            <label for="category-extensions" data-i18n="extensions"
-              >Extensions</label
+            <label for="category-extensions" data-i18n="extensionsOptional"
+              >Extensions (optional)</label
             >
             <input
               type="text"
               id="category-extensions"
               data-i18n-placeholder="extensionsPlaceholder"
-              placeholder=".mp4, .mkv, .avi"
+              placeholder="e.g. .pdf, .jpg, .doc"
             />
-            <small class="hint" data-i18n="extensionsHint"
-              >Comma-separated, optional</small
-            >
           </div>
-          <button type="submit" class="btn-primary" data-i18n="addCategory">
-            Add Category
-          </button>
+          <div class="form-actions">
+            <button type="submit" class="btn-primary" data-i18n="save">
+              Save
+            </button>
+            <button
+              type="button"
+              id="cancel-form-btn"
+              class="btn-ghost"
+              data-i18n="cancel"
+            >
+              Cancel
+            </button>
+          </div>
         </form>
-      </section>
-
-      <!-- Categories List -->
-      <section class="categories-section">
-        <h2 data-i18n="categories">Categories</h2>
-        <input
-          type="text"
-          id="category-filter"
-          class="filter-input"
-          data-i18n-placeholder="filterPlaceholder"
-          placeholder="Filter categories..."
-        />
-        <ul id="category-list"></ul>
-        <p
-          id="empty-message"
-          class="empty-message"
-          hidden
-          data-i18n="noCategories"
-        >
-          No categories yet. Add one above!
-        </p>
-      </section>
+      </div>
 
       <!-- Import/Export Section -->
       <section class="import-export-section">
@@ -95,7 +108,7 @@
               d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z"
             />
           </svg>
-          <span data-i18n="exportConfig">Export Configuration</span>
+          <span data-i18n="exportConfig">Export</span>
         </button>
         <button id="import-btn" class="btn-secondary btn-block">
           <svg viewBox="0 0 24 24" width="14" height="14">
@@ -104,10 +117,10 @@
               d="M9 16h6v-6h4l-7-7-7 7h4v6zm-4 2h14v2H5v-2z"
             />
           </svg>
-          <span data-i18n="importConfig">Import Configuration</span>
+          <span data-i18n="importConfig">Import</span>
         </button>
       </section>
-    </main>
+    </footer>
 
     <!-- Toast Container -->
     <div id="toast-container"></div>
